syntax = "proto3";

package fleetd.common.v1;

option go_package = "fleetd.sh/gen/common/v1;commonpb";

import "google/protobuf/timestamp.proto";

// MetricPoint represents a single metric data point
message MetricPoint {
  string name = 1;
  double value = 2;
  map<string, string> labels = 3;
  google.protobuf.Timestamp timestamp = 4;
  MetricType type = 5;
}

// MetricType defines the type of metric
enum MetricType {
  METRIC_TYPE_UNSPECIFIED = 0;
  METRIC_TYPE_GAUGE = 1;
  METRIC_TYPE_COUNTER = 2;
  METRIC_TYPE_HISTOGRAM = 3;
}

// SystemMetrics contains system-level metrics
message SystemMetrics {
  double cpu_usage_percent = 1;
  double memory_usage_percent = 2;
  int64 memory_used_bytes = 3;
  int64 memory_available_bytes = 4;
  double disk_usage_percent = 5;
  int64 disk_used_bytes = 6;
  int64 disk_available_bytes = 7;
  double network_rx_bytes_per_sec = 8;
  double network_tx_bytes_per_sec = 9;
  int32 process_count = 10;
  double load_average_1m = 11;
  double load_average_5m = 12;
  double load_average_15m = 13;
  int64 uptime_seconds = 14;
  double temperature_celsius = 15;  // For devices with temp sensors
}

// LogEntry represents a log message
message LogEntry {
  google.protobuf.Timestamp timestamp = 1;
  LogLevel level = 2;
  string message = 3;
  string source = 4;  // Component/service that generated the log
  map<string, string> fields = 5;  // Structured log fields
}

// LogLevel defines log severity levels
enum LogLevel {
  LOG_LEVEL_UNSPECIFIED = 0;
  LOG_LEVEL_DEBUG = 1;
  LOG_LEVEL_INFO = 2;
  LOG_LEVEL_WARN = 3;
  LOG_LEVEL_ERROR = 4;
  LOG_LEVEL_FATAL = 5;
}

// Event represents a significant occurrence
message Event {
  string id = 1;
  string type = 2;  // device.registered, update.started, etc.
  google.protobuf.Timestamp timestamp = 3;
  map<string, string> data = 4;
  EventSeverity severity = 5;
}

// EventSeverity defines the importance of an event
enum EventSeverity {
  EVENT_SEVERITY_UNSPECIFIED = 0;
  EVENT_SEVERITY_INFO = 1;
  EVENT_SEVERITY_WARNING = 2;
  EVENT_SEVERITY_ERROR = 3;
  EVENT_SEVERITY_CRITICAL = 4;
}